--- a/css/main.css
+++ b/css/main.css
@@ -18,8 +18,18 @@ header {
 
 h1 {
   font-family: 'Roboto Slab', serif;
-  margin: 0;
+  margin-top: 0;
   color: #fff;
+}
+
+a {
+  text-decoration: none;
+}
+
+.header-description {
+  width: 80%;
+  color: #eee;
+  margin: 0 auto;
 }
 
 .timeline {
@@ -42,11 +52,11 @@ h1 {
 
 .timeline-entry {
   position: relative;
-  margin-top: -100px;
+  top: -200px;
 }
 
 .timeline-entry.first {
-  margin-top: 10px;
+  top: 10px;
 }
 
 .timeline-icon {
@@ -57,6 +67,7 @@ h1 {
   margin-left: -20px;
   border: 4px solid #ccc;
   border-radius: 50%;
+  box-shadow: 0px 1px 1px #fff;
   text-align: center;
   vertical-align: middle;
 }
@@ -125,6 +136,21 @@ h1 {
   margin: 5px 0;
   -webkit-margin-before: 5px;
   -webkit-margin-after: 5px;
+}
+
+.timeline-description img {
+  max-width: 150px;
+  display: block;
+}
+
+.image-right {
+  float: right;
+  padding: 10px 0 20px 20px;
+}
+
+.captioned-image .caption {
+  font-style: italic;
+  font-size: 80%;
 }
 
 @media only screen and (max-width: 500px) {
