--- a/css/main.css
+++ b/css/main.css
@@ -67,7 +67,7 @@ a {
   margin-left: -20px;
   border: 4px solid #ccc;
   border-radius: 50%;
-  box-shadow: 0px 1px 1px #fff;
+  box-shadow: 0px 1px 1px #999;
   text-align: center;
   vertical-align: middle;
 }
