--- a/css/main.css
+++ b/css/main.css
@@ -70,7 +70,7 @@ a {
 
 .timeline-entry {
   position: relative;
-  margin-top: -100px;
+  margin-top: -75px;
 }
 
 .timeline-entry.first {
@@ -120,6 +120,7 @@ a {
 }
 
 .sub-entry {
+  clear: both;
   margin-top: 30px;
 }
 
@@ -190,7 +191,7 @@ a {
   display: block;
   line-height: 120%;
   font-style: italic;
-  font-size: 80%;
+  font-size: 90%;
 }
 
 .captioned-image {
