--- a/css/main.css
+++ b/css/main.css
@@ -10,10 +10,15 @@ body {
   font-family: 'Hind Vadodara', sans-serif;
 }
 
-header.page-header {
+header.page-header,
+footer.page-footer {
   background-color: #005289;
   padding: 50px 0;
   text-align: center;
+}
+
+footer.page-footer {
+  padding: 10px 0;
 }
 
 h1 {
@@ -26,7 +31,8 @@ a {
   text-decoration: none;
 }
 
-header.page-header p {
+header.page-header p,
+footer.page-footer p {
   width: 80%;
   max-width: 1400px;
   line-height: 120%;
@@ -34,7 +40,8 @@ header.page-header p {
   margin: 0px auto 10px auto;
 }
 
-header.page-header a {
+header.page-header a,
+footer.page-footer a {
   color: #7ACBFF;
 }
 
@@ -43,7 +50,7 @@ header.page-header a {
   width: 90%;
   max-width: 1600px;
   margin: 0px auto;
-  padding: 20px 0;
+  padding: 20px 0 100px 0;
 }
 
 .timeline::before {
@@ -56,9 +63,15 @@ header.page-header a {
   background: #ccc;
 }
 
-.timeline-filter {
+.timeline-filter-wrapper {
   background-color: #ccc;
-  padding: 10px 5%;
+  padding: 10px 0;
+}
+
+.timeline-filter {
+  width: 90%;
+  max-width: 1600px;
+  margin: 0px auto;
 }
 
 .timeline-filter ul {
@@ -151,11 +164,6 @@ header.page-header a {
   margin-top: -10px;
 }
 
-.timeline-entry.even .timeline-description:after {
-  left: 100%;
-  border-left-color: #fff;
-}
-
 .timeline-entry.odd .timeline-description:after {
   right: 100%;
   border-right-color: #fff;
@@ -217,3 +225,40 @@ header.page-header a {
   max-width: 200px;
 }
 
+/* Make this less sad on mobile */
+
+@media only screen and (min-device-width: 600px) {
+  .timeline-entry.even .timeline-description:after {
+    left: 100%;
+    border-left-color: #fff;
+  }
+}
+
+@media only screen and (max-device-width: 600px) {
+  .timeline::before {
+    left: 0;
+  }
+
+  .timeline-icon {
+    left: 0; 
+  }
+
+  .timeline-entry {
+    margin-top: 25px;
+  }
+
+  .timeline-entry.odd .timeline-description,
+  .timeline-entry.even .timeline-description {
+    margin-left: 50px;
+  }
+
+  .timeline-entry.even .timeline-description:after {
+    right: 100%;
+    border-right-color: #fff;
+  }
+
+  .timeline-description {
+    width: 90%;
+  }
+
+}
