--- a/css/main.css
+++ b/css/main.css
@@ -229,6 +229,12 @@ footer.page-footer a {
   max-width: 200px;
 }
 
+section.attribution {
+  width: 90%;
+  max-width: 1600px;
+  margin: 0 auto;
+}
+
 /* Make this less sad on mobile */
 
 @media only screen and (min-device-width: 600px) {
@@ -266,6 +272,8 @@ footer.page-footer a {
   }
 
 }
+
+/* Fallback for no Javascript */
 
 .no-js .timeline::before {
   left: 0;
