--- a/css/main.css
+++ b/css/main.css
@@ -253,6 +253,22 @@ section.attribution {
   margin: 0 auto;
 }
 
+div.etc {
+  width: 90%;
+  max-width: 1600px;
+  margin: 0px auto;
+  padding: 30px 0;
+}
+
+div.etc h1 {
+  color: #005289;
+}
+
+div.etc .description {
+  font-size: 80%;
+  font-style: italic;
+}
+
 /* Make this less sad on mobile */
 
 @media only screen and (min-device-width: 600px) {
