--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ html {
 body {
   width: 100%;
   height: 100%;
-  background-color: #1f1e1e;
+  background-color: #e0e0e0;
   font-family: 'Hind Vadodara', sans-serif;
 }
 
@@ -68,7 +68,7 @@ footer.page-footer a {
   left: 50.2%;
   height: 100%;
   width: 4px;
-  background: white;
+  background: #ccc;
 }
 
 .no-js .timeline-filter-wrapper {
@@ -76,7 +76,7 @@ footer.page-footer a {
 }
 
 .timeline-filter-wrapper {
-  background-color:rgb(14, 13, 13);
+  background-color:#ccc;
   padding: 10px 0;
 }
 
@@ -84,7 +84,6 @@ footer.page-footer a {
   width: 90%;
   max-width: 1600px;
   margin: 0px auto;
-  color: white;
 }
 
 .timeline-filter ul {
@@ -137,12 +136,12 @@ footer.page-footer a {
   box-sizing: border-box;
   position: relative;
   width: 45%;
-  background-color: #333333;
+  background-color: #fff;
   padding: 20px;
-  box-shadow: 0px 1px 4px rgb(8, 8, 8);
+  box-shadow: 0px 1px 2px #999;
   display: inline-block;
   z-index: 1;
-  color:#cccccc
+  
 }
 
 .sub-entry {
@@ -378,4 +377,23 @@ div.etc .description {
 
 .no-js .timeline-description {
   width: 90%;
+}
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #1f1e1e;
+  }
+  .timeline-description {
+    background-color: #333333;
+    box-shadow: 0px 1px 4px rgb(8, 8, 8);
+    color:#cccccc
+  }
+  .timeline-filter-wrapper {
+    background-color:rgb(14, 13, 13);
+    padding: 10px 0;
+  }
+  .timeline-filter {
+   
+    color: white;
+  }
+  
 }
